# school_flow

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
school_flow/: manage.py
school_flow/apps/users/: admin.py  forms.py  managers.py  models.py  permissions.py  services.py  urls.py  views.py
school_flow/apps/users/migrations/: 0001_initial.py
school_flow/apps/users/templates/: invite_confirm_delete.html  invite_edit.html  invite_error.html  invite_form.html  invite_list.html  invite_register.html  login.html  profile_create.html  profile_detail.html  profile_form.html  profile_list.html  user_list.html
school_flow/school_flow/: asgi.py  settings.py  urls.py  wsgi.py
school_flow/templates/: base.html
school_flow/templates/includes/: footer.html  header.html
